Terzo tentativo di correzione di code smell
Signed-off-by: fedesgroii <federico.sgroi@students.uniroma2.eu>